--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class = "content" id = "profil">
     <h1 class = "jud">Profil</h1>
     <br>
-    <center><img class="pp" src="../Pas Foto Putih.jpg" alt="Pas Foto Putih" width="200px"></center>
+    <center><img class="pp" src="Pas Foto Putih.jpg" alt="Pas Foto Putih" width="200px"></center>
     <h1 class = "profil">Nama                    : Muhammad Aufar Mafazi</h1>
     <h1 class = "profil">Tempat tanggal lahir    : Banjarmasin, 25-02-2005</h1>
     <h1 class = "profil">Domisili                : Banjarmasin</h1>
