--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
     <div class="content">
         <h1 class="jud" id="contact">kontak</h1>
         <ul>
-            <li class="kontak"></li>
-            <li class="kontak"></li>
-            <li class="kontak"></li>
+            <li class="kontak">whatsapp : 123 456 789</li>
+            <li class="kontak">instagram : @far.mafaz</li>
+            <li class="kontak">alamat jalan x no y banjarmasin</li>
         </ul>
     </div>
         </main>
