--- a/index.html
+++ b/index.html
@@ -79,64 +79,22 @@
             </div>
         </div>
 
-        <div class="card-flip-container">
-            <div class="card">
-                <div class="card-face card-front">
-                    <span class="skill-title">Java</span>
-                </div>
-                <div class="card-face card-back">
-                    <span class="skill-description">biasanya digunakan untuk backend aplikasi</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="card-flip-container">
-            <div class="card">
-                <div class="card-face card-front">
-                    <span class="skill-title">C#</span>
-                </div>
-                <div class="card-face card-back">
-                    <span class="skill-description">Bahasa pemrograman untuk pengembangan aplikasi desktop dan web.</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="card-flip-container">
-            <div class="card">
-                <div class="card-face card-front">
-                    <span class="skill-title">MySQL</span>
-                </div>
-                <div class="card-face card-back">
-                    <span class="skill-description">Sistem manajemen basis data relasional.</span>
-                </div>
-            </div>
-        </div>
-        
-        <div class="card-flip-container">
-            <div class="card">
-                <div class="card-face card-front">
-                    <span class="skill-title">Figma</span>
-                </div>
-                <div class="card-face card-back">
-                    <span class="skill-description">Alat untuk desain UI/UX dan prototyping.</span>
-                </div>
-            </div>
-        </div>
+       <div class="content">
+        <ul>
+            <li class="skills">HTML & CSS</li>
+            <p>Web Design</p>
+            <li class="skills">C#</li>
+            <p>back-end programing</p>
+            <li class="skills">Java</li>
+            <p>back-end programing</p>
+            <li class="skills">Figma</li>
+            <p>UI/UX Design</p>
+            <li class="skills"></li>
+            <p>DataBase</p>
+            <li class="skills">Word & Excel</li>
+            <p>Data</p>
+        </ul>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>Z
     <div class="content">
         <h1 class="jud" id="contact">kontak</h1>
         <ul>
