--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p>back-end programing</p>
             <li class="skills">Figma</li>
             <p>UI/UX Design</p>
-            <li class="skills"></li>
+            <li class="skills">MySql</li>
             <p>DataBase</p>
             <li class="skills">Word & Excel</li>
             <p>Data</p>
